3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

common/item.c: Fix possible buffer overflows; improve performance by
   minimizing string copies; fix bugs because of missing braces; make sure
   all strings are \0-terminated.
Andreas Kirschbaum 2007-02-10

Misc LOG fixes (mostly add missing newline), no functional change.
 common/anim.c arch.c holy.c image.c init.c [also fix missing init value] porting.c readable.c
  recipe.c region.c treasure.c
 server/init.c weather.c
Ryo 2007-02-10

Implement feature request #1653770: Sockpuppeting fix (no exp when perm exp is hit).
Implement feature request #1560385: Players killing other players should get no exp.
Two new settings are added, pk_max_experience and pk_max_experience_percent. Check
 settings file to see how they work.
Also, experience gained for killing a player never exceed experience that player can lose
 considering permanent experience.
Modified files:
 common/init.c
 include/global.h
 lib/settings
 server/attack.c init.c
---
 common/porting.c: add missing variable type.
Ryo 2007-02-10

Use const char* instead of char*, use thread-safe strerror_r, fix potential memory leak.
 common/porting.c
 include/libproto.h
---
Remove static buffer from get_string_move_type().
 common/loader.l
---
 common/object.c: don't use global errmsg variable for errors, just LOG() them.
---
Remove static buffer from create_template_pathname().
 common/map.c
 include/libproto.h
 server/server.c
---
Remove static buffer from create_pathname().
 common/map.c
 include/libproto.h
 server/plugins.c server.c
 utils/mapper.c
---
Remove static buffer from create_overlay_pathname().
 common/map.c
 include/libproto.h
 server/c_wiz.c plugins.c
---